Revert all client side production code, retaining some extra tests.
-Servlet is in charge of filtering; tests extended